# iran-sentiment

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: accounts.py  settings.py  timeline.py  tracked_posts.py
src/: cli.py
src/analysis/: event_study.py  sentiment.py
src/collectors/: truthsocial_collector.py  x_collector.py
src/visualization/: plots.py
